--- a/Netsy.UI/Silverlight.Netsy.UI.csproj
+++ b/Netsy.UI/Silverlight.Netsy.UI.csproj
@@ -83,6 +83,9 @@
     <Compile Include="ViewModels\Listings\TagsListingsViewModel.cs" />
     <Compile Include="ViewModels\ListingViewModel.cs" />
     <Compile Include="ViewModels\PagedCollectionViewModel.cs" />
+    <Compile Include="ViewModels\Shops\FavorersOfShopViewModel.cs" />
+    <Compile Include="ViewModels\Shops\FavoriteListingsOfUserViewModel.cs" />
+    <Compile Include="ViewModels\Shops\FavoriteShopsOfUserViewModel.cs" />
     <Compile Include="ViewModels\Shops\FeaturedSellersViewModel.cs" />
     <Compile Include="ViewModels\Shops\ShopListingsViewModel.cs" />
     <Compile Include="ViewModels\Shops\ShopsByNameViewModel.cs" />
