--- a/Silverlight/Netsy.Favorites.Web/Netsy.Favorites.Web.csproj
+++ b/Silverlight/Netsy.Favorites.Web/Netsy.Favorites.Web.csproj
@@ -64,9 +64,12 @@
     </CodeAnalysisDictionary>
     <Content Include="ClientBin\Netsy.Favorites.xap" />
     <Content Include="ClientBin\Silverlight.Netsy.TestControl.xap" />
+    <Content Include="ShopListings.html" />
+    <Content Include="FrontListings.html" />
+    <Content Include="FrontListingsByCategory.html" />
+    <Content Include="FrontListingsByColor.html" />
     <Content Include="Silverlight.js" />
-    <Content Include="FavoritesTestPage.aspx" />
-    <Content Include="FavoritesTestPage.html" />
+    <Content Include="UserFavorites.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
