--- a/Silverlight/Netsy.Favorites.Web/Netsy.Listings.Web.csproj
+++ b/Silverlight/Netsy.Favorites.Web/Netsy.Listings.Web.csproj
@@ -84,6 +84,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="App_Data\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\..\Netsy.UI\Silverlight.Netsy.UI.csproj">
       <Project>{7CE18D14-D4C5-4A24-84E4-C3F81CAAB6DE}</Project>
       <Name>Silverlight.Netsy.UI</Name>
@@ -92,13 +95,10 @@
       <Project>{B979E9E0-EB45-47F3-8DA7-307546B8515E}</Project>
       <Name>Silverlight.Netsy</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Netsy.Favorites\Netsy.Favorites.csproj">
+    <ProjectReference Include="..\Netsy.Favorites\Netsy.Listings.csproj">
       <Project>{3B3AB3F6-6709-4E22-B8F1-CAC8F373D4B6}</Project>
-      <Name>Netsy.Favorites</Name>
+      <Name>Netsy.Listings</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Data\" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
