--- a/Silverlight/Netsy.Favorites/Netsy.Listings.csproj
+++ b/Silverlight/Netsy.Favorites/Netsy.Listings.csproj
@@ -12,8 +12,8 @@
     <ProjectTypeGuids>{A1591282-1198-4647-A2B1-27E5FF5F6F3B};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Netsy.Favorites</RootNamespace>
-    <AssemblyName>Netsy.Favorites</AssemblyName>
+    <RootNamespace>Netsy.Listings</RootNamespace>
+    <AssemblyName>Netsy.Listings</AssemblyName>
     <TargetFrameworkVersion>v3.0</TargetFrameworkVersion>
     <SilverlightApplication>true</SilverlightApplication>
     <SupportedCultures>
@@ -22,7 +22,7 @@
     <GenerateSilverlightManifest>true</GenerateSilverlightManifest>
     <XapFilename>Netsy.Favorites.xap</XapFilename>
     <SilverlightManifestTemplate>Properties\AppManifest.xml</SilverlightManifestTemplate>
-    <SilverlightAppEntry>Netsy.Favorites.App</SilverlightAppEntry>
+    <SilverlightAppEntry>Netsy.Listings.App</SilverlightAppEntry>
     <TestPageFileName>TestPage.html</TestPageFileName>
     <CreateTestPage>true</CreateTestPage>
     <ValidateXaml>true</ValidateXaml>
