--- a/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
+++ b/Netsy.IntegrationTest/Netsy.IntegrationTest.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Feedback\GetFeedbackTest.cs" />
     <Compile Include="Gifts\GetGiftGuideListingsTest.cs" />
     <Compile Include="Gifts\GetGiftGuidesTest.cs" />
+    <Compile Include="Requests\DataRetrieverTest.cs" />
     <Compile Include="Requests\WebRequestGeneratorTest.cs" />
     <Compile Include="Shop\GetShopDetailsByNameTest.cs" />
     <Compile Include="TestIdHelper.cs" />
@@ -120,6 +121,10 @@
     </CodeAnalysisDictionary>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Netsy.Test\Netsy.Test.csproj">
+      <Project>{C49A7726-92BF-4C00-A2E0-7544CCF9C003}</Project>
+      <Name>Netsy.Test</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Netsy\Netsy.csproj">
       <Project>{1E1D68D7-D36C-4AB3-9476-75EB4687323B}</Project>
       <Name>Netsy</Name>
